[package]
name = "redscript-io"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
indexmap = "2"
crc32fast = "1"
bitfield-struct = "0.6"
hipstr = "0.4"
vmap = { version = "0.6", optional = true }

[dependencies.byte]
git = "https://github.com/jac3km4/byte"
branch = "combined"
features = ["alloc", "derive"]

[dev-dependencies]
vmap = "0.6"
argh = "0.1"

[[example]]
name = "cli"
required-features = ["mmap"]

[features]
arc = []
mmap = ["vmap"]

[lints.rust]
warnings = "deny"
future-incompatible = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
rust-2018-compatibility = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"
single_match_else = "deny"
redundant_closure_for_method_calls = "deny"
cloned_instead_of_copied = "deny"
redundant_else = "deny"
unnested_or_patterns = "deny"
unreadable_literal = "deny"
type_repetition_in_bounds = "deny"
equatable_if_let = "deny"
implicit_clone = "deny"
explicit_deref_methods = "deny"
explicit_iter_loop = "deny"
inefficient_to_string = "deny"
match_bool = "deny"
